--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Viewmodel</string>
+    <string name="laki">Laki-laki</string>
+    <string name="wanita">Perempuan</string>
+    <string name="submit">Submit</string>
+    <string name="back">Back</string>
+    <string name="nama">Nama Lengkap</string>
+    <string name="alamat">alamat</string>
+    <string name="gender">Jenis Kelamin</string>
+    <string name="detail">Detail</string>
 </resources>
